[workspace]
members = [
    "kern",
    "shoo",
    "crates/build_bits",
    "crates/fidget_spinner",
    "crates/hexdump",
    "crates/microflop",
    "crates/mu",
    "crates/mu_shared",
    "crates/riscv",
    "crates/riscv_paging",
    "crates/spanner",
    "crates/typesafe_ints",
    "tools/uflop",
    "user/init",
]
# We don't build ANYTHING by default, because everything is target specific
default-members = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
# if operations are expected to not overflow, they will be annotated as such
overflow-checks = true
