[package]
name = "kern"
version = "0.1.0"
authors = ["lf- <lf-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../crates/riscv" }
log = "0.4.11"
static_assertions = "1.1.0"

[build-dependencies]
cc = "1.0.66"
