[package]
name = "shoo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.11"
microflop = { path = "../crates/microflop" }
spanner = { path = "../crates/spanner" }
riscv = { path = "../crates/riscv" }

[dependencies.goblin]
version = "0.3.0"
default_features = false
features = ["elf64"]

[dependencies.fdt-rs]
version = "0.4.2"
default-features = false

[dependencies.bitvec]
version = "0.20.1"
default-features = false

[dependencies.riscv_paging]
path = "../crates/riscv_paging"

[dependencies.fidget_spinner]
path = "../crates/fidget_spinner"

[build-dependencies]
build_bits = { path = "../crates/build_bits" }
cc = "1.0.65"
