[package]
name = "riscv"
version = "0.1.0"
authors = ["lf- <lf-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_paging = { path = "../riscv_paging" }
fidget_spinner = { path = "../fidget_spinner" }
bitvec = { version = "0.20.1", default_features = false }
typesafe_ints = { path = "../typesafe_ints" }
log = "0.4.11"
