[package]
name = "riscv_paging"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitvec]
version = "0.19.4"
default-features = false

[dependencies.fidget_spinner]
path = "../fidget_spinner"
