[package]
name = "uflop"
version = "0.1.0"
authors = ["lf- <lf-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2"}
color-eyre = { version = "0.5.10"}
hexdump = { path = "../../crates/hexdump" }
microflop = { path = "../../crates/microflop", features = ["std"] }
fallible-iterator = { version = "0.2.0", default-features = false }
